elements/rh-tabs/rh-tabs.css
:host {
  display: block;
  background: var(--_context-background-color);
  color: var(--_context-text);
}

[part="container"] {
  container-type: inline-size;
}

[part="tabs-container"] {
  position: relative;
  display: flex;
  overflow: hidden;

  --_tab-max-width: 200px;
}

[part="tabs-container"]:before {
  position: absolute;
  inset-inline-end: 0;
  inset: 0;
  border-width: 0 0 var(--rh-border-width-sm, 1px);
  border-color: var(--_border-color);
  border-style: solid;
}

[part="tabs"],
[part="panels"] {
  display: block;
}

[part="tabs"] {
  scrollbar-width: none;
  position: relative;
  max-width: 100%;
  overflow-x: auto;
  display: flex;
  bottom: 0;
  margin: 0;
  width: auto;
  font-size: var(--rh-font-size-body-text-md, 1rem);
}

[part="tabs-container"]:before,
[part="tabs"]:before,
button:before {
  position: absolute;
  inset-block-end: 0;
  inset-inline: 0;
  content: "";
  border-style: solid;
}

@container (min-width: 567px) {
  [part="tabs-container"] {
    --_tab-max-width: none;
  }
}

[part="tabs"]:before,
button:before {
  top: 0;
}

button,
[part="tabs"]:before {
  border: 0;
}

button {
  flex: none;
  line-height: 1;
  opacity: 1;
}

button:before {
  border-block-start-width: 0;
}

button:nth-of-type(1) {
  margin-inline-end: 0;
  translate: 0 0;
}

button:nth-of-type(2) {
  margin-inline-start: 0;
  translate: 0 0;
}

button:disabled {
  pointer-events: none;
}

/* START RH-TABS */

/* stylelint-disable selector-id-pattern */

#rhds-container {
  display: contents;

  --_border-color: var(--rh-tabs-border-color, var(--rh-color-border-subtle-on-light, #c7c7c7));
  --_arrow-color: var(--rh-color-accent-base-on-light, #0066cc);
  --_overflow-button-text-color: var(--rh-color-text-secondary-on-light, #4d4d4d);
  --_overflow-button-disabled-text-color: #d2d2d2;
  --_overflow-button-hover-text-color: var(--rh-color-text-primary-on-light, #151515);
}

#rhds-container.dark {
  --_border-color: var(--rh-tabs-border-color, var(--rh-color-border-subtle-on-dark, #707070));
  --_arrow-color: var(--rh-color-accent-base-on-dark, #92c5f9);
  --_overflow-button-text-color: var(--rh-color-text-secondary-on-dark, #c7c7c7);
  --_overflow-button-disabled-text-color: var(--rh-color-gray-50, #707070);
  --_overflow-button-hover-text-color: var(--rh-color-text-primary-on-dark, #ffffff);
}

:host([theme="base"]) #rhds-container {
  /* Theme base context */
  --_active-tab-border-color:
    var(
        --rh-tabs-active-border-color,
        var(--rh-color-border-interactive-on-light, #0066cc)
      );
}

:host([theme="base"]) #rhds-container.dark {
  --_active-tab-border-color:
    var(
        --rh-tabs-active-border-color,
        var(--rh-color-border-interactive-on-dark, #92c5f9)
      );
}

:host(:is([centered], [box="inset"])) [part="tabs"] {
  margin-inline: var(--rh-tabs-inset, var(--_inset-inline-margin, auto));
}

/* BOX INSET TABS */
:host([box="inset"]:not([vertical])) [part="tabs"] {
  --_inset-inline-margin: var(--rh-space-2xl, 32px);
}

.overflow [part="panels"] {
  --_panels-overflow-padding: var(--rh-space-2xl, 32px);
}

/* OVERFLOW BUTTONS */

/* When overflow no margin (Inset) */
#previousTab + [part="tabs"] {
  --_inset-inline-margin: 0;

  position: relative;
  left: -1px;
  z-index: 1;
}

#previousTab,
#nextTab {
  padding-block: 0;
  padding-inline: var(--rh-space-lg, 16px);
  background-color: var(--_context-background-color);
  color: var(--_overflow-button-text-color);
  position: relative;
  z-index: 2;

  --pf-icon--size: 14px;
}

#nextTab {
  left: -1px;
}

#previousTab:hover,
#nextTab:hover {
  color: var(--_overflow-button-hover-text-color, var(--rh-color-text-primary-on-light, #151515));
}

#previousTab:before,
#nextTab:before {
  border-block-start: var(--rh-border-width-sm, 1px) solid transparent;
  border-block-end: var(--rh-border-width-sm, 1px) solid var(--_border-color);
  border-inline: var(--rh-border-width-sm, 1px) solid var(--_border-color);
}

#previousTab:before {
  border-inline-width: 0 1px;
}

#nextTab:before {
  border-inline-width: 1px 0;
}

#previousTab:hover:before,
#nextTab:hover:before {
  border-block-end: var(--rh-border-width-lg, 3px) solid var(--_border-color);
}

#previousTab:disabled,
#nextTab:disabled {
  color: var(--_overflow-button-disabled-text-color);
}

.rtl :is(#previousTab, #nextTab) pf-icon {
  rotate: 180deg;
}

@media screen and (min-width: 768px) {
  /* VERTICAL TABS */
  :host([vertical]) [part="container"] {
    display: grid;
    grid-template-columns: max-content 1fr;
    grid-template-areas: "tabs panels";
  }

  :host([vertical]) [part="tabs-container"] {
    grid-area: tabs;
    display: inline-flex;
    flex-direction: column;
    height: 100%;
    padding: 0;
    overflow: visible;
  }

  :host([vertical]) [part="panels"] {
    grid-area: panels;
  }

  :host([vertical]) [part="tabs-container"]:before {
    height: 100%;
    border-block-end-width: 0;
    border-inline-start-width: var(--rh-border-width-sm, 1px);
  }

  :host([vertical][box]) [part="tabs-container"]:before {
    border-inline-start-width: 0;
    border-inline-end-width: var(--rh-border-width-sm, 1px);
  }

  :host([vertical]) [part="tabs"] {
    flex-direction: column;
    flex-grow: 1;
    max-width: 15.625rem;
  }
}

